--- a/app/index.html
+++ b/app/index.html
@@ -1,165 +1,282 @@
 ---
-title: 首頁
+title: DOYOGA，做你的瑜珈
 layout: ./app/layout.ejs
 engine: ejs
 ---
 
 <!-- 大圖 -->
 <div class="banner">
-  <div class="container auto-height d-flex justify-end items-center">
-    <h1 class="">Promise-Desert2020 早春系列<span>看得清，才能看得遠</span> </h1>
+  <div class="content container auto-height d-flex justify-center column">
+    <p class="fw-light">健身輕時尚</p>
+    <h1 class="fw-regular">DOYOGA，做你的瑜珈</h1>
+    <h2 class="fw-light">多給自己一點時間享受靜謐，傾聽內心的聲音。</h2>
+    <div>
+    <button type="button" class="btn btn-light">立即預約</button>
+    <button type="button" class="btn btn-primary">課程介紹</button>
+    </div>
   </div>
 </div>
 
 <!-- 服務內容 -->
 <div class="service">
-  <div class="container">
-    <div class="title text-primary">用專業的心，做專業的事</div>
-    <ul class="row justify-between">
-      <li class="row column items-center">
-        <img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-dollar.svg" alt="">
-        <h2 class="text-primary">單一價格</h2>
-        <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
-      </li>
-      <li class="row column items-center">
-        <img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-clock.svg" alt="">
-        <h2 class="text-primary">20 分鐘即可取件</h2>
-        <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
-      </li>
-      <li class="row column items-center">
-        <img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-heart.svg" alt="">
-        <h2 class="text-primary">安心售後服務</h2>
-        <p>我們提供長達120天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
-      </li>
-      <li class="row column items-center">
-        <img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-glasses.svg" alt="">
-        <h2 class="text-primary">關於鏡片</h2>
-        <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<!-- 經典 -->
-<div class="classicProduct">
-  <div class="container">
-    <div class="title text-primary">經典系列鏡框</div>
-    <ul>
-      <li class="d-flex items-center">
-        <img class="pic" src="https://hexschool.github.io/webLayoutTraining1st/week3/product-1.png" alt="optical">
-        <p class="text-secondary italic uppercase flex items-center">
-          <img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-diamond.svg" alt="">
-          optical
-        </p>
-      </li>
-      <li class="d-flex middle items-center">
-        <img class="pic" src="https://hexschool.github.io/webLayoutTraining1st/week3/product-2.png" alt="sunglasses">
-        <p class="text-secondary italic uppercase flex items-center">
-          <img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-sun.svg" alt="">
-          sunglasses
-        </p>
-      </li>
-      <li class="d-flex items-center">
-        <img class="pic" src="https://hexschool.github.io/webLayoutTraining1st/week3/product-3.png" alt="functional">
-        <p class="text-secondary italic uppercase flex items-center">
-          <img src="https://hexschool.github.io/webLayoutTraining1st/week3/icon-thunder.svg" alt="">
-          functional
-        </p>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<!-- 聯名 -->
-<div class="seriesProduct">
-  <div class="container">
-    <div class="title text-white">聯名設計鏡框</div>
+  <div class="container text-center">
+    <div class="title">感受身心，活在當下</div>
+    <div class="subtitle">DOYOGA 可以帶給你...</div>
     <ul class="d-flex">
-      <li class="d-flex items-center justify-center"> 
-        <a href=""><img src="https://hexschool.github.io/webLayoutTraining1st/week3/product-8.png" alt="YOUTH"> </a>
-        <p class="">Double A+</p>
+      <li>
+        <img src="./assets/images/p1.jpg" alt="">
+        <div class="content">
+        <h2>整體健身</h2>
+        <p class="fw-light">每一個動作，都融入運動解剖學的的觀點強調以身體的中心線為出發點。</p>
+        </div>
       </li>
-      <li class="d-flex items-center justify-center">
-        <a href=""><img src="https://hexschool.github.io/webLayoutTraining1st/week3/product-9.png" alt="YOUTH"> </a>
-        <p class="">YOUTH</p>
+      <li>
+        <img src="./assets/images/p2.jpg" alt="">
+        <div class="content">
+        <h2>減壓放鬆</h2>
+        <p class="fw-light">調節全身系統、改善血液循環、減壓養心、釋放身心，達到修心養性的目的。</p>
+        </div>
       </li>
-  </ul>
+     <li>
+        <img src="./assets/images/p3.jpg" alt="">
+        <div class="content">
+        <h2>整體健身</h2>
+        <p class="fw-light">幫助強化背部與腹部的核心肌群，增進我們身體穩定度以及保持良好體態。</p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- 師資 -->
+<div class="teacher">
+  <div class="container d-flex">
+   <div class="teacherStart">
+    <div id="tab-1" class="tab-content current"><img src="./assets/images/t1.jpg" alt="" ></div>
+    <div id="tab-2" class="tab-content"><img src="./assets/images/t2.jpg" alt="" ></div>
+    <div id="tab-3" class="tab-content"><img src="./assets/images/t3.jpg" alt="" ></div>
+  </div>
+  <div class="teacherEnd">
+      <div class="title">頂尖師資、專業教學</div>
+      <div class="subtitle">強力師資，經歷豐富，協會認證。運用引導式教學，針對不同需求的人制定專屬課程。</div>
+       <ul class="tabs">
+          <li class="d-flex items-center current" data-tab="tab-1">
+           <img src="./assets/images/teacher-1.png" alt="">
+           <div class="fw-regular">
+           <h2>Carol Tang 老師</h2>
+           <p>教學經歷 10 年</p>
+           <p>瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。</p>
+           </div>
+         </li>
+           <li class="d-flex items-center" data-tab="tab-2">
+           <img src="./assets/images/teacher-2.png" alt="">
+           <div class="fw-regular">
+           <h2>Kanae 老師</h2>
+           <p>教學經歷 10 年</p>
+           <p class="d-none">瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。</p>
+           </div>
+         </li>
+           <li class="d-flex items-center" data-tab="tab-3">
+           <img src="./assets/images/teacher-3.png" alt="">
+           <div class="fw-regular">
+           <h2>Asa Ifrit 老師</h2>
+           <p>教學經歷 10 年</p>
+           <p class="d-none">瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。</p>
+           </div>
+         </li>
+       </ul>
+    </div>
+  </div>
+</div>
+
+<!-- 環境介紹 -->
+<div class="space container">
+    <div class="spaceStart row content-center">
+      <div class="title">舒適空間、靜心放鬆</div>
+      <div class="subtitle">我們都渴望平靜安穩的生活，擁有一處能夠靜心的角落，安撫每天繁雜忙碌的心。</div>
+      <button type="button" class="btn-arrow">環境介紹</button>
+    </div>
+    <div class="spaceEnd d-flex justify-between">
+      <div class="first">
+      <img src="./assets/images/s1.jpg" alt="" class="">
+      </div>
+      <div class="last">
+      <img src="./assets/images/s2.jpg" alt="">
+      <img src="./assets/images/s3.jpg" alt="">
+      </div>
+    </div>
+</div>
+
+<!-- 課程 -->
+<div class="course d-flex">
+    <div class="courseStart row content-center">
+      <div class="title">精心設計、課程多元</div>
+      <div class="subtitle">教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。</div>
+      <button type="button" class="btn-arrow">課程介紹</button>
+    </div>
+   <div class="courseEnd">
+    <!-- Swiper -->
+      <div class="swiper-container">
+          <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./assets/images/c1.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/c2.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/c3.jpg" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="./assets/images/c4.jpg" alt="">
+              </div>
+          </div>
+      </div>
+    </div>
+</div>
+
+<!-- 方案 -->
+<div class="price d-flex">
+  <div class="container text-center">
+    <div class="title">感受身心，活在當下</div>
+    <div class="subtitle">DOYOGA 可以帶給你...</div>
+    <ul class="row justify-between">
+      <li class="d-flex">
+        <img src="./assets/images/01.jpg" alt="">
+            <div class="card">
+              <h2>首次體驗</h2>
+              <h3>NT $450 / 次</h3>
+              <p>分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
+              <button  type="button" class="btn">選擇課程</button>
+          </div>
+      </li>
+      <li class="d-flex">
+        <img src="./assets/images/02.jpg" alt="">
+            <div class="card">
+              <h2>短期體驗</h2>
+              <h3>NT $1800 / 月</h3>
+              <p>分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
+              <button  type="button" class="btn">選擇課程</button>
+          </div>
+      </li>
+       <li class="d-flex">
+        <img src="./assets/images/03.jpg" alt="">
+            <div class="card">
+              <h2>長期體驗</h2>
+              <h3>NT $5600 / 季</h3>
+              <p>分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
+              <button  type="button" class="btn">選擇課程</button>
+          </div>
+      </li>
+    </ul>
   </div>
 </div>
 
 <!-- 推薦 -->
 <div class="recommend">
-  <div class="container">
-    <div class="title text-primary">顧客推薦</div>
-    <ul class="row justify-between">
-      <li>
-        <img src="https://hexschool.github.io/webLayoutTraining1st/week3/rec-1.png" alt="recommend">
-            <div class="content">
-                <p class="name">Jessy</p>
-                <p class="des">眼鏡品質優良，下次還會想來這邊購買！</p>
-                <p class="time">2021/06/20</p>
+  <div class="container text-center">
+    <div class="title">聽聽他們怎麼說</div>
+    <!-- Swiper -->
+    <div class="mySwiper">
+    <div class="swiper-wrapper">
+
+      <div class="swiper-slide">
+        <img src="./assets/images/user-1.png" alt="">
+          <div class="main">
+            <h2>Joanne<span>Oct 17 2020</span></h2>
+            <h3>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+            </h3>
+            <p>服務很好、設備優良！</p>
           </div>
-      </li>
-      <li>
-        <img src="https://hexschool.github.io/webLayoutTraining1st/week3/rec-2.png" alt="recommend">
-            <div class="content">
-                <p class="name">凱倫</p>
-                <p class="des">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
-                <p class="time">2021/04/18</p>
+      </div>
+
+      <div class="swiper-slide">
+        <img src="./assets/images/user-2.png" alt="">
+          <div class="main">
+            <h2>穎旻<span>Oct 17 2020</span></h2>
+            <h3>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+            </h3>
+            <p>上課後身體健康很多</p>
           </div>
-      </li>
-      <li>
-        <img src="https://hexschool.github.io/webLayoutTraining1st/week3/rec-3.png" alt="recommend">
-            <div class="content">
-                <p class="name">悠悠</p>
-                <p class="des">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-                <p class="time">2020/12/25</p>
+      </div>
+
+      <div class="swiper-slide">
+        <img src="./assets/images/user-3.png" alt="">
+          <div class="main">
+            <h2>子琪<span>Oct 17 2020</span></h2>
+            <h3>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+            </h3>
+            <p>上課很有趣！</p>
           </div>
-      </li>
-      <li>
-        <img src="https://hexschool.github.io/webLayoutTraining1st/week3/rec-4.png" alt="recommend">
-            <div class="content">
-                <p class="name">Kyuan</p>
-                <p class="des">服務很好，品質沒有任何問題，非常喜歡。</p>
-                <p class="time">2020/10/31</p>
+      </div>
+
+      <div class="swiper-slide">
+        <img src="./assets/images/user-4.png" alt="">
+          <div class="main">
+            <h2>葉子<span>Oct 17 2020</span></h2>
+            <h3>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+            </h3>
+            <p>老師的教學很專業</p>
           </div>
-      </li>
-    </ul>
+      </div>
+
+      <div class="swiper-slide">
+        <img src="./assets/images/user-5.png" alt="">
+         <div class="main">
+            <h2>Ray<span>Oct 17 2020</span></h2>
+            <h3>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+            </h3>
+            <p>很舒壓</p>
+          </div>
+      </div>
+
+      <div class="swiper-slide">
+        <img src="./assets/images/user-6.png" alt="">
+          <div class="main">
+            <h2>俊儀<span>Oct 17 2020</span></h2>
+            <h3>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+              <span class="material-icons">star</span>
+            </h3>
+            <p>讚的！</p>
+          </div>
+      </div>
+
+
+    </div>
+  </div>
   </div>
 </div>
 
-<!-- 聯絡 -->
-<div class="contact">
-  <div class="container">
-    <div class="title text-black">聯絡我們</div>
-     <div class="form m-auto">
-            <p class="">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
-            <form action="/index.html" method="post">
-                <div class="formGroup">
-                    <label for="name">姓名</label>
-                    <input type="text" id="name" placeholder="陳小明">
-                </div>
-                <div class="formGroup">
-                    <label for="phone">聯絡電話</label>
-                    <input type="text" id="phone" placeholder="0912-345-678">
-                </div>
-                <div class="formGroup">
-                    <label for="email">電子郵件</label>
-                    <input type="email" id="email" placeholder="example@email.com">
-                </div>
-                <div class="formGroup">
-                    <label for="suggest">意見反應</label>
-                    <textarea id="suggest" placeholder="請輸入您的意見" rows="8"></textarea>
-                </div>
-                <div class="formGroup flex">
-                    <input type="checkbox" id="agree">
-                    <label class="" for="agree">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
-                </div>
-                <button type="submit" class="submit">確認送出</button>
-            </form>
-     </div>
-  </div>
-</div>
+
 
 
 
